@startuml
!define LIGHTBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml
skinparam roundcorner 20

title __Todoc DATA Diagram__\n

  namespace com {
    namespace cleanup.todoc {
      namespace database {
        abstract class com.cleanup.todoc.database.TodocDatabase {
            {static} - DBNAME : String
            {static} - INSTANCE : TodocDatabase
            {static} + getInstance()
            {abstract} + projectDao()
            {abstract} + taskDao()
            {static} - prepopulateDatabase()
        }
      }
    }
  }

    namespace com {
      namespace cleanup.todoc {
        namespace database {
          namespace dao {
            interface com.cleanup.todoc.database.dao.ProjectDao {
                {abstract} + getProject()
                {abstract} + getProjects()
                {abstract} + insertProject()
            }
          }
        }
      }
    }


    namespace com {
      namespace cleanup.todoc {
        namespace database {
          namespace dao {
            interface com.cleanup.todoc.database.dao.TaskDao {
                {abstract} + deleteTask()
                {abstract} + getTask()
                {abstract} + getTasks()
                {abstract} + insertTask()
                {abstract} + updateTask()
            }
          }
        }
      }
    }




    namespace com {
      namespace cleanup.todoc {
        namespace injection {
          class com.cleanup.todoc.injection.Injection {
              {static} + provideExecutor()
              {static} + provideProjectDataSource()
              {static} + provideTaskDataSource()
              {static} + provideViewModelFactory()
          }
        }
      }
    }

    namespace com {
      namespace cleanup.todoc {
        namespace injections {

            class com.cleanup.todoc.injections.ViewModelFactory {
                - executor : Executor
                + ViewModelFactory()
                + create()
           }
         }
      }
    }


    com.cleanup.todoc.injections.ViewModelFactory .up.|> android.arch.lifecycle.ViewModelProvider.Factory
    com.cleanup.todoc.injections.ViewModelFactory o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
    com.cleanup.todoc.injections.ViewModelFactory o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource


namespace com {
    namespace cleanup.todoc {
      namespace list {
        class com.cleanup.todoc.list.TaskViewModel {
            - currentProject : LiveData<Project>
            - executor : Executor
            - projects : LiveData<List<Project>>
            + TaskViewModel()
            + createTask()
            + deleteTask()
            + getProjects()
            + getTasks()
            + init()
            + updateTask()
        }
      }
    }
  }


  com.cleanup.todoc.list.TaskViewModel -up-|> android.arch.lifecycle.ViewModel
  com.cleanup.todoc.list.TaskViewModel o-down- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
  com.cleanup.todoc.list.TaskViewModel o-down- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource
  com.cleanup.todoc.database -up- com.cleanup.todoc.database.dao.ProjectDao
  com.cleanup.todoc.database -up- com.cleanup.todoc.database.dao.TaskDao
  com.cleanup.todoc.repositories.ProjectDataRepository -down- com.cleanup.todoc.database.dao.ProjectDao
  com.cleanup.todoc.repositories.TaskDataRepository -down- com.cleanup.todoc.database.dao.TaskDao


  @enduml